k8s/infrastructure/monitoring/trivy/CiliumNetworkPolicy.operator.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-operator-egress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trivy-operator}}
  egress:
    - {toEntities: [kube-apiserver]}  # Watch resources cluster-wide
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: trivy, app.kubernetes.io/name: trivy-server}}], toPorts: [{ports: [{port: '4954', protocol: TCP}]}]}
    - {toFQDNs: [{matchName: mirror.gcr.io}, {matchName: ghcr.io}, {matchName: quay.io}, {matchName: index.docker.io}, {matchName: check.trivy.dev}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
