k8s/infrastructure/monitoring/trivy/CiliumNetworkPolicy.scanjob.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-scanjob-egress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/component: scan-job}}
  egress:
    - {toEntities: [world]}  # Pull target images from all registries
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: trivy, app.kubernetes.io/name: trivy-server}}], toPorts: [{ports: [{port: '4954', protocol: TCP}]}]}  # Submit to trivy server
    - {toFQDNs: [{matchName: mirror.gcr.io}, {matchName: ghcr.io}, {matchName: quay.io}, {matchName: index.docker.io}, {matchName: check.trivy.dev}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
