k8s/infrastructure/monitoring/trivy/CiliumNetworkPolicy.server.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-server-egress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trivy-server}}
  egress:
    - {toEntities: [world]}  # Download and refresh vuln DB from ghcr.io
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-server-ingress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trivy-server}}
  ingress:
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: trivy, app.kubernetes.io/component: scan-job}}], toPorts: [{ports: [{port: '4954', protocol: TCP}]}]}  # Scan jobs
    - {toFQDNs: [{matchName: mirror.gcr.io}, {matchName: ghcr.io}, {matchName: quay.io}, {matchName: index.docker.io}, {matchName: check.trivy.dev}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
