k8s/infrastructure/monitoring/trivy/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-operator-egress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trivy-operator}}
  egress:
    - {toEntities: [kube-apiserver]}  # Watch resources cluster-wide
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-server-egress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trivy-server}}
  egress:
    - {toEntities: [world]}  # Download and refresh vuln DB from ghcr.io
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-server-ingress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: trivy-server}}
  ingress:
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: trivy, app.kubernetes.io/component: scan-job}}], toPorts: [{ports: [{port: '4954', protocol: TCP}]}]}  # Scan jobs
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-trivy-scanjob-egress
  namespace: trivy
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/component: scan-job}}
  egress:
    - {toEntities: [world]}  # Pull target images from all registries
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: trivy, app.kubernetes.io/name: trivy-server}}], toPorts: [{ports: [{port: '4954', protocol: TCP}]}]}  # Submit to trivy server
